persistent-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: logping
  name: file-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: file-claim
      containers:
        - name: logoutput
          image: mahk00/logoutput:0.2.3
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
        - name: pingpong-writer
          image: mahk00/pingpong:0.1.1
          volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/files
