persistent-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 2333
      protocol: TCP
      targetPort: 3000
